# multitest

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  multitest-demo.toml  multitest.toml
aur/: PKGBUILD
ci/: before_deploy.ps1  script.sh
multitest-demo-subfolder/: multitest-demo2.toml
src/: cli.rs  config.rs  eprint.rs  main.rs  test.rs
