[package]
name = "multitest"
version = "0.1.0"
authors = ["Loïc Damien <loic.damien@dzamlo.ch>"]
license = "MIT OR Apache-2.0"

build = "build.rs"

[dependencies]
atty = "0.2"
clap = "2.20"
liquid = "0.9"
regex = "0.2"
termcolor = "0.3"
toml = "0.3.0"

[build-dependencies]
clap = "2.20"
regex = "0.2"
